service.yml
apiVersion: v1
kind: Service
metadata:
  name: camp2023std-service
  namespace: apps
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
    - name: camp2023std-port
      protocol: TCP
      port: 80
      targetPort: 8080
