ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camp2023std-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /camp2023std/hello(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: camp2023std-service
                port:
                  number: 80
